# ragoragino.github.io

./: .gitmodules  CNAME  _config.yml  about.md  config.toml
.github/workflows/: hugo.yaml
_posts/: 2020-03-06-static-linking-cpp.markdown  2020-04-09-container-networking.markdown  2020-11-30-welcome-to-jekyll.markdown  2020-12-15-design-patterns-in-the-wild-builder.markdown  2020-12-15-design-patterns-in-the-wild-introduction.markdown  2021-03-06-ebpf-explorations.markdown  2021-03-23-cgo-static.markdown  2021-10-01-cpp-coroutines-1.markdown  2021-10-01-cpp-coroutines-2.markdown  2021-10-01-cpp-coroutines-3.markdown  2021-10-01-cpp-coroutines-4.markdown  2022-02-05-goaway-test.markdown  2022-03-27-rust-VPN.markdown  2022-04-18-margita.markdown  2022-08-26-apache.markdown  2023-01-22-parquet.markdown
assets/code/cgo-static/compressor/: CMakeLists.txt  compressor.c
content/: _index.md
content/about/: _index.md  info.md
content/blog/: _index.md
content/essays/: 2022-04-18-margita.markdown  2024-08-30-england.markdown  2025-01-06-men.markdown  2025-01-20-cities.markdown  2025-01-28-expected-returns.markdown  2025-02-09-mosaic.markdown  2025-04-01-on-travelling.markdown  2025-07-29-louis-ck.markdown  2026-01-11-chile.md  2026-04-16-on-death.md  _index.md
content/explorations/: 2025-08-02-stablecoins.markdown  2025-11-03-europe.markdown  _index.md
content/tech/: 2020-03-06-static-linking-cpp.markdown  2020-12-15-design-patterns-in-the-wild-builder.markdown  2020-12-15-design-patterns-in-the-wild-introduction.markdown  2024-12-01-python-memory.markdown  _index.md  (+5 more)
(+45 files in other folders)
