CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(CompressorLibrary)

SET(C_STANDARD 11)

FIND_PACKAGE(ZLIB REQUIRED)

ADD_LIBRARY(compressor STATIC compressor.c)

TARGET_INCLUDE_DIRECTORIES(compressor 
    PRIVATE ${ZLIB_INCLUDE_DIRS}
    PUBLIC ${CMAKE_SOURCE_DIR}
)

TARGET_LINK_LIBRARIES(compressor 
    PRIVATE ${ZLIB_LIBRARIES})

INSTALL(TARGETS compressor
        LIBRARY DESTINATION lib)

ADD_LIBRARY(compressorShared SHARED compressor.c)

TARGET_INCLUDE_DIRECTORIES(compressorShared 
    PRIVATE ${ZLIB_INCLUDE_DIRS}
    PUBLIC ${CMAKE_SOURCE_DIR}
)

TARGET_LINK_LIBRARIES(compressorShared 
    PRIVATE ${ZLIB_LIBRARIES})

INSTALL(TARGETS compressorShared
        LIBRARY DESTINATION lib)